[package]
name = "eva-sdk-derive"
version = "0.1.2"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
description = "EVA ICS v4 SDK derive macros"
readme = "README.md"
keywords = ["eva-ics", "iot", "industrial", "scada", "cloud"]
repository = "https://github.com/eva-ics/eva4-sdk-derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.91", features = ["full"] }
